# s2_modmerge

./: .editorconfig  BUILD.md  CMakeLists.txt  README.md  development.txt
res/: s2modmerge_settings.json
res/Sacred 2 Modmerge Examples/scripts/: autoexec.txt  behaviour.txt  genMipMapInfo.txt  heightmap.txt  landscape.txt  optionsDefault.txt  roadmap.txt
res/Sacred 2 Modmerge Examples/scripts/client/: Eliza.txt  animation.txt  collision.txt  environment.txt  keycodes.txt  minitype.txt  patches.txt  poidata.txt  relations.txt  soundcluster.txt  soundprofile.txt  soundresources.txt  surface.txt
res/Sacred 2 Modmerge Examples/scripts/server/: balance.txt  blueprint.txt  creatures.txt  drop.txt  equipsets.txt  faction.txt  pathObjects.txt  portals.txt  quest.txt  questscripts.txt  region.txt  respawn.txt  spawn.txt  treasure.txt  triggerarea.txt  triggervolumes.txt  waypoints.txt  weaponpool.txt  weather.txt  worldobjects.txt
res/Sacred 2 Modmerge Examples/scripts/shared/: books.txt  creatureinfo.txt  defines.txt  iteminfo.txt  itemtype.txt  material.txt  spells.txt  typification.txt
src/: s2modmerge.cpp
